# meanvc2.rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: install.yml  macos.yml  moderation.yml  windows.yml
crates/babiniku/: Cargo.toml
crates/babiniku/examples/: audio_probe.rs  seedvc_finetune_ab.rs  seedvc_mel_probe.rs
crates/babiniku/src/: buildinfo.rs  ckpt.rs  lib.rs
crates/babiniku/src/audio/: cpal_backend.rs  mod.rs  pulse.rs
crates/cosyvoice/: Cargo.toml
crates/cosyvoice/examples/: context_ab.rs  offline_convert.rs  ref_align_probe.rs  speaker_sim_probe.rs  stream_demo.rs  stream_tail_probe.rs
crates/cosyvoice/src/: campplus.rs  encoder.rs  flow.rs  hift.rs  lib.rs  mel.rs  pipeline.rs  stream.rs  tokenizer.rs  unet.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: main.rs
crates/meanvc/: Cargo.toml
crates/meanvc/examples/: convert_v1.rs  pipeline_demo.rs  streaming_demo.rs
crates/meanvc/src/: config.rs  frc.rs  lib.rs  meanflow.rs  streaming.rs
crates/meanvc/src/backends/: ecapa.rs  fast_u2pp.rs  wavlm_sv.rs
crates/meanvc/src/model/: attention.rs  decoder.rs  dit.rs  embed.rs  mod.rs  utte.rs
crates/meanvc/src/v1/: card.rs  dit.rs  fbank.rs  mel.rs  mod.rs  mrte.rs
crates/meanvc/tests/: asr_streaming.rs  golden.rs  model.rs
crates/seedvc/: Cargo.toml
crates/seedvc/examples/: offline_convert.rs  stream_probe.rs
crates/seedvc/src/: dit.rs  lib.rs  pipeline.rs  stream.rs  whisper.rs
crates/vc-core/: Cargo.toml
crates/vc-core/examples/: guard_wav.rs
crates/vc-core/src/: bwe.rs  config.rs  declick.rs  encoders.rs  lib.rs  profile.rs
crates/vc-core/src/audio/: mel.rs  mod.rs
crates/vc-demo/: Cargo.toml
crates/vc-demo/examples/: audio_probe.rs
crates/vc-demo/src/: lib.rs
crates/vc-demo/src/audio/: pulse.rs
crates/vevo/: Cargo.toml
crates/vevo/examples/: stream_probe.rs
crates/vevo/src/: fmt.rs  hubert.rs  lib.rs  mel.rs  pipeline.rs  repcodec.rs  stream.rs  vocos.rs
crates/xvc/: Cargo.toml
crates/xvc/examples/: bench_stages.rs  codec_chain_demo.rs  convert_xvc.rs  needle_probe.rs  speaker_embed.rs  window_knee.rs
crates/xvc/src/: codec.rs  converter.rs  lib.rs  pipeline.rs  preprocess.rs  speaker.rs  tokenizer.rs
crates/xvc/tests/: golden_codec.rs  golden_converter.rs  golden_pipeline.rs  golden_speaker.rs  golden_tokenizer.rs
crates/xvc/tests/util/: mod.rs
docs/: cosyvoice.md  macos.md  meanvc.md  seedvc.md  windows.md  xvc.md  zero-vc.md
examples/: v1_demo.rs
src/: lib.rs
src/backends/: fast_u2pp.rs  mod.rs  vocos.rs  wavlm_sv.rs
src/v1/: dit.rs  mel.rs  mod.rs
tests/: asr_streaming.rs  golden.rs
tools/: README.md  convert_cosyvoice.py  convert_official.py  convert_seedvc.py  convert_xvc_generator.py  convert_xvc_speaker.py  convert_xvc_tokenizer.py  export_wavlm_onnx.py  gen_cosyvoice_fixtures.py  gen_seedvc_dit_fixture.py  gen_seedvc_fixtures.py  gen_seedvc_whisper_fixture.py  gen_v1_fixtures.py  gen_vevo_fixtures.py  gen_xvc_fixtures.py  seedvc_finetune_data.py
