[package]
name = "meanvc2"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Unofficial Rust implementation of MeanVC 2: robust low-latency streaming zero-shot voice conversion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/m96-chan/meanvc2.rs"
readme = "README.md"
keywords = ["voice-conversion", "speech", "streaming", "diffusion", "candle"]
categories = ["multimedia::audio", "science"]

[dependencies]
candle-core = { git = "https://github.com/m96-chan/candle", branch = "feat/forward-ad-jvp" }
candle-nn = { git = "https://github.com/m96-chan/candle", branch = "feat/forward-ad-jvp" }
rustfft = "6"
thiserror = "2"
# TUI demo (feature "demo")
anyhow = { version = "1", optional = true }
num_cpus = { version = "1", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
libpulse-binding = { version = "2", optional = true }
libpulse-simple-binding = { version = "2", optional = true }
hound = { version = "3", optional = true }

[dev-dependencies]
anyhow = "1"
hound = "3"

[features]
default = []
demo = ["dep:anyhow", "dep:num_cpus", "dep:ratatui", "dep:crossterm", "dep:libpulse-binding", "dep:libpulse-simple-binding", "dep:hound"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[profile.release]
lto = "thin"

[[bin]]
name = "meanvc-demo"
path = "src/bin/demo.rs"
required-features = ["demo"]
