[workspace]
resolver = "2"
members = [
    "crates/vc-core",
    "crates/meanvc",
    "crates/vc-demo",
    "crates/xvc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/m96-chan/babiniku.rs"

[workspace.dependencies]
# Intra-workspace crates.
vc-core = { path = "crates/vc-core" }
meanvc = { path = "crates/meanvc" }
xvc = { path = "crates/xvc" }
# ML runtime: the m96-chan candle fork (forward-mode AD / JVP needed by the
# mean-flows objective). Keep both crates on the same branch.
candle-core = { git = "https://github.com/m96-chan/candle", branch = "feat/forward-ad-jvp" }
candle-nn = { git = "https://github.com/m96-chan/candle", branch = "feat/forward-ad-jvp" }
rustfft = "6"
thiserror = "2"
anyhow = "1"
hound = "3"
num_cpus = "1"
# Signal handling for the demo teardown (SIGINT + SIGTERM via "termination").
ctrlc = { version = "3.4", features = ["termination"] }
ort = "2.0.0-rc.10"

[profile.release]
lto = "thin"
