[package]
name = "babiniku-fetch"
description = "Checkpoint fetcher/converter: downloads official weights from Hugging Face and converts them to the fp32 safetensors the engines load — no Python required"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "babiniku-fetch"
path = "src/main.rs"

[dependencies]
candle-core = { workspace = true }
hf-hub = "0.4"
anyhow = "1"
# Direct HTTPS downloads for checkpoints not mirrored on Hugging Face
# (torchaudio's HuBERT-large hub URL, Amphion's repo-checked-in norm
# stats) — already in the dependency tree transitively via hf-hub.
ureq = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
