[package]
name = "vc-demo"
description = "Real-time TUI voice-conversion demo with a virtual microphone (PulseAudio/PipeWire on Linux, VB-CABLE/BlackHole routing via cpal on Windows/macOS)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "babiniku-demo"
path = "src/bin/demo.rs"

[dependencies]
# GPL-3.0 engine, strictly opt-in: binaries built WITHOUT the `seedvc`
# feature carry no GPL obligations (see crates/seedvc/Cargo.toml).
seedvc = { path = "../seedvc", optional = true }
vc-core = { workspace = true }
meanvc = { workspace = true }
xvc = { workspace = true }
candle-core = { workspace = true }
anyhow = { workspace = true }
ctrlc = { workspace = true }
num_cpus = { workspace = true }
hound = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
signalsmith-stretch = "0.1"
nnnoiseless = { version = "0.5", default-features = false }

# Linux backend: PulseAudio/PipeWire virtual mic (null sink + remap, #39).
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2"
libpulse-simple-binding = "2"
# Portable backend, opt-in on Linux (needs ALSA headers): `cpal-backend`.
cpal = { version = "0.18", optional = true }

# Windows / macOS backend: capture/playback via cpal (WASAPI / CoreAudio);
# the virtual mic is a routed loopback driver (VB-CABLE / BlackHole, #51).
[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.18"

[features]
default = []
# Compute the voice print natively from the reference audio (WavLM ONNX).
wavlm = ["meanvc/wavlm"]
# Seed-VC engine (GPL-3.0!): enabling this feature makes distributed
# binaries GPL — see crates/seedvc.
seedvc = ["dep:seedvc"]
cuda = ["meanvc/cuda", "xvc/cuda", "candle-core/cuda", "seedvc?/cuda"]
metal = ["meanvc/metal", "xvc/metal", "candle-core/metal"]
# Build the portable cpal backend on Linux too (ALSA headers required at
# build time); groundwork for the pure-ALSA fallback (#55).
cpal-backend = ["dep:cpal"]
