[package]
name = "vevo"
description = "Vevo-Timbre engine: weight-compatible pure-candle port of Amphion Vevo (issue #74)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
vc-core = { path = "../vc-core" }
rustfft = { workspace = true }

[dev-dependencies]
hound = { workspace = true }
safetensors = "0.4"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
