[package]
name = "xvc"
description = "X-VC engine (zero-shot streaming voice conversion in codec space) — scaffold, see issue #30"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["voice-conversion", "speech", "streaming", "codec", "candle"]
categories = ["multimedia::audio", "science"]

[dependencies]
vc-core = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
rustfft = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hound = { workspace = true }

[features]
default = []
cuda = ["vc-core/cuda", "candle-core/cuda", "candle-nn/cuda"]
metal = ["vc-core/metal", "candle-core/metal", "candle-nn/metal"]
